# rayengine

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt
assets/: walk_minimum.bvh
include/core/: engine.h  node.h  node3d.h  scene_tree.h
include/core/motion/: bvh_format.h  motion.h  motion_editor.h  motion_player.h  skeleton.h  skeleton_visualizer.h
include/core/render/: camera_node.h
include/core/render/primitives/: cube.h  cylinder.h  sphere.h
include/core/utils/: orbit_controls.h
src/: main.cpp
src/core/: engine.cpp  node.cpp  node3d.cpp  scene_tree.cpp
src/core/motion/: bvh_format.cpp  motion.cpp  motion_editor.cpp  motion_player.cpp  skeleton.cpp  skeleton_visualizer.cpp
src/core/render/: camera_node.cpp
src/core/render/primitives/: cube.cpp  cylinder.cpp  sphere.cpp
src/core/utils/: orbit_controls.cpp
test/: main.cpp
test/src/: test_scene.cpp  test_scene.h
